# twitch_category

./: .env  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
frontend/src/: App.js  index.css
src/: api.rs  main.rs
ui-twitch/: package-lock.json  package.json
ui-twitch/public/: index.html
ui-twitch/src/: App.tsx
ui-twitch/src/components/: AoVivo.tsx  CardCanal.tsx  Footer.tsx  Header.tsx
ui-twitch/src/pages/home/: home.tsx
