[package]
name = "twitch_category"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
reqwest = "0.11.25"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.114"
dotenv = "0.15.0"
actix-web = "4.5.1"